# multitier-bullet-detection-260327-fcx

./: .gitignore  00_START_TESTING_NOW.md  ACTION_PLAN_NEXT_STEPS.md  ARCHITECTURAL_SYSTEM_REPORT_VI.md  BUILD_AND_TEST_REPORT.md  CLEANUP_DATASET_COMPLETION_REPORT.md  CLEANUP_ORGANIZATION_SUMMARY.md  CMakeLists.txt  CMakePresets.json  COMPLETE_STEP2_STEP3_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION_INDEX_AND_SUMMARY.md  COMPREHENSIVE_SYSTEM_ARCHITECTURE_REPORT.md  CSV_DATASET_ANALYSIS_REPORT.md  DATASETS_INVENTORY_REPORT.md  DATASETS_QUICK_REFERENCE.md  DATASET_DELETION_PLAN.md  DATASET_FINAL_REPORT.txt  DATASET_GENERATION_COMPLETE.txt  DATASET_GENERATION_INDEX.txt  DATASET_GENERATION_REPORT_v2.md  DATASET_README_v2.md  DATASET_SUMMARY.txt  DIRECTORY_STRUCTURE_GUIDE.md  EXECUTIVE_SUMMARY.md  FILE_INDEX_AND_NAVIGATION.md  GITIGNORE_RECOMMENDATIONS.md  INCREMENTAL_TRAINING_GUIDE.md  INCREMENTAL_TRAINING_QUICKSTART.md  INCREMENTAL_TRAINING_TECHNICAL.md  INSTALLATION_OPTIONS_SUMMARY.md  INTEGRATION_CHECKLIST.md  MASTER_TEST_DEPLOYMENT_EXECUTION.md  ONLINE_CURRICULUM_LEARNING_GUIDE.md  OPENCV_INSTALLATION_READY_TO_START.md  ORGANIZATION_NEXT_STEPS.md  PROJECT_ORGANIZATION_INDEX.md  QUICK_REFERENCE_GUIDE_VI.md  README.md  README_STEP2_STEP3.md  READY_TO_TEST_START_HERE.md  (+45 more)
.github/workflows/: build.yml
apps/: bullet_hole_detection_system.cpp
cmake/: helpers.cmake
config/: development.json  production.json
docs/: BUILD_INSTRUCTIONS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_DOCUMENTATION_INDEX.md  README.md  STEP2_BUILD_VERIFICATION_REPORT.md
docs/step_analyses/: FEATURE_ENGINEERING_ANALYSIS.md  MODEL_IMPLEMENTATION_ANALYSIS.md  MULTI_TIER_LOGIC_ANALYSIS.md  PERFORMANCE_AND_REAL_TIME_ANALYSIS.md  STEP10_PRODUCTION_COMPLETE.md  STEP10_PRODUCTION_READINESS_ANALYSIS.md  STEP10_QUICK_SUMMARY.txt  STEP1_RESTRUCTURING_EXECUTION.txt  STEP2_CODE_QUALITY_SUMMARY.md  STEP2_QUICK_REF.txt  STEP3_FEATURE_ENGINEERING_COMPLETE.md  STEP3_QUICK_SUMMARY.txt  STEP4_MODEL_IMPLEMENTATION_COMPLETE.md  STEP4_QUICK_SUMMARY.txt  STEP5_MULTI_TIER_LOGIC_COMPLETE.md  STEP5_QUICK_SUMMARY.txt  STEP6_PERFORMANCE_OPTIMIZATION_COMPLETE.md  STEP6_QUICK_SUMMARY.txt  STEP7_MULTI_CAMERA_3D_ANALYSIS.md  STEP7_MULTI_CAMERA_3D_COMPLETE.md  STEP7_QUICK_SUMMARY.txt  STEP8_QUICK_SUMMARY.txt  STEP8_TRACKING_COMPLETE.md  STEP8_TRACKING_SYSTEM_ANALYSIS.md  STEP9_BUILD_SYSTEM_ANALYSIS.md  STEP9_BUILD_SYSTEM_COMPLETE.md  STEP9_QUICK_SUMMARY.txt  STEPS_1_2_3_FINAL_SUMMARY.md  STEPS_1_4_FINAL_SUMMARY.md  STEPS_1_5_FINAL_SUMMARY.md  STEPS_1_6_COMPLETE_INDEX.md  STEPS_1_6_SUMMARY.md  STEPS_1_7_FINAL_SUMMARY.md  STEPS_1_8_FINAL_SUMMARY.md  STEPS_1_9_FINAL_SUMMARY.md  SYSTEM_REVIEW_INDEX.md
docs/summaries/: ARCHITECTURE.md  ARCHITECTURE_AFTER_STEP2.md  CODE_QUALITY_ANALYSIS_REPORT.md  CODE_QUALITY_REFACTORING_COMPLETE.md  COMPLETE_DOCUMENTATION_INDEX_STEPS_1_7.md  COMPLETE_SYSTEM_REVIEW_STEPS1_2.md  COMPLETION_CERTIFICATE_STEP5.txt  COMPLETION_CERTIFICATE_STEP6.txt  COMPLETION_CERTIFICATE_STEP7.txt  COMPLETION_CERTIFICATE_STEP8.txt  COMPLETION_CERTIFICATE_STEP9.txt  COMPLETION_CERTIFICATE_STEPS_1_3.md  COMPLETION_CERTIFICATE_STEPS_1_4.txt  COMPREHENSIVE_REVIEW_INDEX.md  FINAL_PROJECT_SUMMARY.md  OPTIMIZATION_REPORT_STEP2.md  PROJECT_COMPLETION_CERTIFICATE.txt  QUICKSTART.md  QUICK_REF_ALL_STEPS.txt  QUICK_REF_STEPS1_2.txt
include/: bullet_hole_detection_system.h
include/calibration/: CameraModel.h
include/candidate/: CandidateDetector.h  ImprovedBlobDetectorStep2.h  ImprovedCandidateDetector.h  RobustNoiseFilter.h
include/confidence/: Calibration.h
include/core/: ErrorHandler.h  FeatureValidator.h  MathUtils.h  ProductionReady.h  Types.h
include/feature/: FeatureConfig.h  FeatureExtractor.h  ImprovedFeatureExtractor.h  ImprovedFeatureExtractorOptimized.h
include/performance/: OptimizedProcessing.h
include/pipeline/: FrameSynchronizer.h  Pipeline.h
include/reconstruction/: ImprovedTriangulation.h  Triangulation.h
include/tier/: ImprovedModels.h  ImprovedTierLogic.h  Tiers.h
include/tracking/: ImprovedTracking.h  TrackManager.h
include/training/: DataLoader.h  IncrementalTrainer.h  OnlineCurriculumLearner.h
scripts/: EXECUTION_COMPLETE.txt  EXECUTION_SUMMARY.py  QUICKSTART.md  analyze_datasets.py  batch_generator.py  benchmark_generation.py  create_visual_report.py  dataset_utils.py  diagnose_images.py  display_fixed_samples.py  display_random_sample.py  display_samples_by_label.py  execute_generation.py  execute_realistic_generation.py  executor.py  extend_dataset.py  extend_dataset_efficient.py  extend_dataset_v2.py  extend_dataset_v4.py  fast_generator.py  final_check.py  final_verification.py  full_generator.py  generate_dataset.py  generate_dataset_batch.py  generate_dataset_fixed.py  generate_dataset_realistic.py  generate_dataset_v2_realistic.py  generate_dataset_v2_test.py  generate_full_dataset.py  generate_ir_dataset_v4.py  generate_ir_final_dataset.py  generate_phase_batch.py  generate_realistic_final.py  quick_check_extended_dataset.py  quick_test_structure.py  realistic_bullet_hole_generator.py  run_generation.py  run_generation_background.py  test_batch_small.py  (+19 more)
scripts/dataset_old/: annotations.csv  report.txt
src/: autonomous_training_debug.cpp  incremental_training_main.cpp  main.cpp  online_curriculum_execution.cpp  online_curriculum_learning_main.cpp  training_execution.cpp  training_main.cpp  training_standalone.cpp
src/calibration/: CameraModel.cpp
src/candidate/: CandidateDetector.cpp  ImprovedBlobDetectorStep2.cpp  ImprovedCandidateDetector.cpp  RobustNoiseFilter.cpp
src/confidence/: Calibration.cpp
src/core/: ProductionReady.cpp
src/feature/: FeatureExtractor.cpp  ImprovedFeatureExtractor.cpp  ImprovedFeatureExtractorOptimized.cpp
src/performance/: OptimizedProcessing.cpp
src/pipeline/: Pipeline.cpp
src/reconstruction/: ImprovedTriangulation.cpp  Triangulation.cpp
tests/: CMakeLists.txt  test_integration_real_image.cpp  test_step2_blob_detection.cpp  test_step2_step3_unit.cpp  test_step3_feature_optimization.cpp  test_step4_small_object_validation.cpp
(+8 files in other folders)
